# orion

./: .gitignore
services/mock-api/: pyproject.toml
terraform/: versions.tf
terraform/environments/local/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/kind-cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/local_k8s/: main.tf  outputs.tf
