[build-system]
requires =["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name ="mock-api"
version ="0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",  
]

[project.optional]
dev = [
    "pytest",
    "mypy"
]

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
where = ["src"]